* Some code refactors