@@ -1,7 +1,7 @@
 name: balun
 description: "Simple Flutter application for football scores."
 publish_to: 'none'
-version: 1.6.4+164
+version: 1.6.5+165
 
 #
 # DEPLOYING APP
@@ -54,7 +54,7 @@ dependencies:
   url_launcher: 6.3.2
   video_player: 2.10.1
   visibility_detector: 0.4.0+2
-  watch_it: 2.1.0
+  watch_it: 2.1.1
   youtube_player_flutter: 9.1.3
 
   calendar_date_picker2:
@@ -63,7 +63,7 @@ dependencies:
       ref: feature/on-value-changed-dialog
 
 dev_dependencies:
-  build_runner: 2.10.2
+  build_runner: 2.10.3
   envied_generator: 1.3.1
   flutter_launcher_icons: 0.14.4
   hive_ce_generator: 1.10.0
